wp/ingressclass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: wp
spec:
  controller: "k8s.io/ingress-nginx"
  parameters:
    apiGroup: networking.k8s.io
    kind: Ingress
    name: wp
